--- a/src/pages/add/create-wallet/create-wallet.html
+++ b/src/pages/add/create-wallet/create-wallet.html
@@ -34,9 +34,8 @@
 
     <ion-item>
       <ion-label stacked>{{'Coin' | translate}}</ion-label>
-      <ion-select okText="{{okText}}" cancelText="{{cancelText}}" placeholder="{{'Select a coin' | translate}}" formControlName="coin">
-        <ion-option value="btc">Bitcoin (BTC)</ion-option>
-        <ion-option value="bch">Bitcoin Cash (BCH)</ion-option>
+      <ion-select disabled okText="{{okText}}" cancelText="{{cancelText}}" placeholder="{{'Select a coin' | translate}}" formControlName="coin">
+        <ion-option value="via">VIA</ion-option>
       </ion-select>
     </ion-item>
 
