--- a/src/pages/add/import-wallet/import-wallet.html
+++ b/src/pages/add/import-wallet/import-wallet.html
@@ -59,9 +59,8 @@
 
     <ion-item *ngIf="selectedTab != 'file'">
       <ion-label stacked>{{'Coin' | translate}}</ion-label>
-      <ion-select okText="{{okText}}" cancelText="{{cancelText}}" placeholder="{{'Select a coin' | translate}}" formControlName="coin">
-        <ion-option value="btc">Bitcoin (BTC)</ion-option>
-        <ion-option value="bch">Bitcoin Cash (BCH)</ion-option>
+      <ion-select disabled okText="{{okText}}" cancelText="{{cancelText}}" placeholder="{{'Select a coin' | translate}}" formControlName="coin">
+        <ion-option value="via">Viacoin (VIA)</ion-option>
       </ion-select>
     </ion-item>
 
