Viacoin: swapped a lot of occurences of "Bitcoin" to "Viacoin"

--- a/src/pages/onboarding/tour/tour.html
+++ b/src/pages/onboarding/tour/tour.html
@@ -11,8 +11,8 @@
 <ion-content no-bounce>
   <ion-slides pager="true" (ionSlideDidChange)="slideChanged()">
     <ion-slide>
-      <h3 class="title" translate>Bitcoin is secure, digital money.</h3>
-      <p translate class="top-description">You can spend bitcoin at millions of websites and stores worldwide.</p>
+      <h3 class="title" translate>Viacoin is secure, digital money.</h3>
+      <p translate class="top-description">You can spend viacoin at millions of websites and stores worldwide.</p>
       <img src='assets/img/app/onboarding/tour-phone.svg' />
       <div class="bottom-absolute">
         <p translate class="bottom-description">Just scan the code to pay.</p>
@@ -23,7 +23,7 @@
     </ion-slide>
 
     <ion-slide>
-      <h3 class="title" translate>Bitcoin is a currency.</h3>
+      <h3 class="title" translate>Viacoin is a currency.</h3>
       <p translate class="top-description">You can trade it for other currencies like US Dollars, Euros, or Pounds.</p>
       <div class="ticker-container">
         <div class="ticker">1 VIA = {{localCurrencySymbol}}{{localCurrencyPerBtc}}</div>
