--- a/src/pages/onboarding/disclaimer/disclaimer.html
+++ b/src/pages/onboarding/disclaimer/disclaimer.html
@@ -4,7 +4,7 @@
 <ion-content no-bounce>
   <h3 *ngIf="resume" class="title" translate>Quick review!</h3>
   <h3 *ngIf="!resume" class="title" translate>Almost done! Let's review.</h3>
-  <p class="top-description" translate>Bitcoin is different - it cannot be safely held with a bank or web service.</p>
+  <p class="top-description" translate>Viacoin is different - it cannot be safely held with a bank or web service.</p>
   <ion-list class="checkbox-list" no-lines>
     <ion-item>
       <ion-label>
