--- a/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
+++ b/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
@@ -65,7 +65,7 @@
       </ion-item>
 
       <ion-item>
-        <span translate>Approximate Bitcoin network fee to transfer wallet's balance (with normal priority)</span>
+        <span translate>Approximate Viacoin network fee to transfer wallet's balance (with normal priority)</span>
         <p class="info">{{minFeePer}} [{{minFee}}]</p>
       </ion-item>
     </div>
