Viacoin: swapped a lot of occurences of "bitcoin" to "viacoin"

--- a/src/pages/wallet-details/wallet-balance/wallet-balance.html
+++ b/src/pages/wallet-details/wallet-balance/wallet-balance.html
@@ -10,7 +10,7 @@
   <ion-list>
     <label-tip type="warn" header="no-header" class="no-arrowhead">
       <div label-tip-body translate>
-        All of your bitcoin wallet balance may not be available for immediate spending.
+        All of your viacoin wallet balance may not be available for immediate spending.
       </div>
     </label-tip>
     <ion-item>
