--- a/src/pages/onboarding/tour/tour.html
+++ b/src/pages/onboarding/tour/tour.html
@@ -38,13 +38,13 @@
     </ion-slide>
 
     <ion-slide>
-      <h3 class="title" translate>You control your bitcoin.</h3>
-      <p translate class="top-description">This app stores your bitcoin with cutting-edge security.</p>
+      <h3 class="title" translate>You control your viacoin.</h3>
+      <p translate class="top-description">This app stores your viacoin with cutting-edge security.</p>
       <img src='assets/img/app/onboarding/tour-control.svg' />
       <div class="bottom-absolute">
         <p translate class="bottom-description">Not even BitPay can access it.</p>
         <button ion-button class="button-standard e2e-create-wallet" (click)="createDefaultWallet()">
-          {{'Create bitcoin wallet' | translate}}
+          {{'Create viacoin wallet' | translate}}
         </button>
       </div>
     </ion-slide>
