--- a/src/pages/send/fee-warning/fee-warning.html
+++ b/src/pages/send/fee-warning/fee-warning.html
@@ -5,7 +5,7 @@
   <div class="modal-content">
     <div class="modal-heading" translate>Viacoin miner fees unusually high</div>
     <div class="modal-message" translate>
-      Viacoin (VIA) miner fees are high due to record demand for limited space on the Viacoin network. The Viacoin team does not receive and does not control bitcoin miner fees.
+      Viacoin (VIA) miner fees are high due to record demand for limited space on the Viacoin network. The Viacoin team does not receive and does not control viacoin miner fees.
     </div>
     <button ion-button clear color="danger" class="button-standard" (click)="close()">
       {{'I understand' | translate}}
