--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      <img class="home-logo" src="assets/img/app/logo-negative.svg">
+      <img class="home-logo" src="assets/img/app/logo-negative.png">
     </ion-title>
     <ion-buttons right>
       <button class="modal-close-button" (click)="settings()" ion-button>
