--- a/src/pages/onboarding/tour/tour.html
+++ b/src/pages/onboarding/tour/tour.html
@@ -42,7 +42,7 @@
       <p translate class="top-description">This app stores your viacoin with cutting-edge security.</p>
       <img src='assets/img/app/onboarding/tour-control.svg' />
       <div class="bottom-absolute">
-        <p translate class="bottom-description">Not even BitPay can access it.</p>
+        <p translate class="bottom-description">Not even the Viacoin team can access it.</p>
         <button ion-button class="button-standard e2e-create-wallet" (click)="createDefaultWallet()">
           {{'Create viacoin wallet' | translate}}
         </button>
