Viacoin: Changed disclaimer text

--- a/src/pages/onboarding/disclaimer/disclaimer.html
+++ b/src/pages/onboarding/disclaimer/disclaimer.html
@@ -21,7 +21,7 @@
     <div *ngIf="hasEmail">
       <ion-item>
         <ion-label>
-          <span translate>I give explicit consent to BitPay to use my email address to send me email notifications about payments (and, if selected, email updates and news about the wallet).</span>
+          <span translate>I give explicit consent to the Viacoin team to use my email address to send me email notifications about payments (and, if selected, email updates and news about the wallet).</span>
         </ion-label>
         <ion-checkbox [(ngModel)]="accepted.third"></ion-checkbox>
       </ion-item>
