--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -92,7 +92,7 @@
             <img src="assets/img/check-white.svg" class="bg green" />
           </ion-icon>
           <div class="title" translate>
-            Your bitcoin wallet is ready!
+            Your viacoin wallet is ready!
           </div>
           <div class="subtitle" translate>
             On this screen you can see all your wallets, accounts, and assets.
@@ -137,7 +137,7 @@
         <ion-item-divider>
           <div class="title wallets-list-title" item-start>
             <img src="assets/img/icon-bitcoin.svg" alt="Bitcoin Wallets" width="18" />
-            <span translate>Bitcoin Wallets</span>
+            <span translate>Viacoin Wallets</span>
           </div>
           <div class="title-buttons" item-end *ngIf="!showReorderBtc">
             <button ion-button clear icon-only color="grey" (click)="goToAddView()">
