--- a/src/pages/send/send.html
+++ b/src/pages/send/send.html
@@ -42,7 +42,7 @@
       <div class="send-header-wrapper">
         <span class="send-heading" translate>Recipient</span>
         <ion-item class="search-wrapper" [ngClass]="{'invalid': invalidAddress && search != ''}">
-          <ion-input placeholder="{{'Search or enter bitcoin address' | translate}}" [(ngModel)]="search" (ngModelChange)="processInput()"></ion-input>
+          <ion-input placeholder="{{'Search or enter viacoin address' | translate}}" [(ngModel)]="search" (ngModelChange)="processInput()"></ion-input>
           <ion-icon *ngIf="invalidAddress && search != ''" item-end class="backspace-icon" name="backspace" (click)="search = ''"></ion-icon>
           <ion-icon item-end class="scan-icon" (click)="openScanner()">
             <img src="assets/img/scan-ico.svg">
@@ -69,8 +69,7 @@
 
       <div class="card" *ngIf="walletBtcList && walletBtcList[0]">
         <ion-item-divider class="title">
-          <img src="assets/img/icon-bitcoin.svg" alt="Bitcoin Wallets" width="16" />
-          <span translate>Transfer to Bitcoin Wallet</span>
+          <span translate>Transfer to Viacoin Wallet</span>
         </ion-item-divider>
 
         <ion-list>
