--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -68,7 +68,7 @@
           <img src="assets/img/settings-icons/icon-network.svg" width="22">
         </ion-icon>
         <ion-label>
-          {{'Bitcoin network fee policy' | translate}}
+          {{'Viacoin network fee policy' | translate}}
         </ion-label>
       </button>
 
