--- a/src/pages/wallet-details/wallet-balance/wallet-balance.html
+++ b/src/pages/wallet-details/wallet-balance/wallet-balance.html
@@ -33,7 +33,7 @@
     </ion-item>
     <label-tip type="info" header="no-header">
       <div label-tip-body translate>
-        The total amount of bitcoin stored in this wallet.
+        The total amount of viacoin stored in this wallet.
       </div>
     </label-tip>
 
@@ -57,7 +57,7 @@
     </ion-item>
     <label-tip type="info" header="no-header">
       <div label-tip-body translate>
-        The amount of bitcoin immediately spendable from this wallet.
+        The amount of viacoin immediately spendable from this wallet.
       </div>
     </label-tip>
 
@@ -81,7 +81,7 @@
     </ion-item>
     <label-tip type="info" header="no-header">
       <div label-tip-body translate>
-        The amount of bitcoin stored in this wallet with less than 1 blockchain confirmation.
+        The amount of viacoin stored in this wallet with less than 1 blockchain confirmation.
       </div>
     </label-tip>
 
@@ -105,7 +105,7 @@
     </ion-item>
     <label-tip type="info" header="no-header">
       <div label-tip-body translate>
-          The amount of bitcoin stored in this wallet that is allocated as inputs to your pending transaction proposals. The amount is determined using unspent transaction outputs associated with this wallet and may be more than the actual amounts associated with your pending transaction proposals.
+          The amount of viacoin stored in this wallet that is allocated as inputs to your pending transaction proposals. The amount is determined using unspent transaction outputs associated with this wallet and may be more than the actual amounts associated with your pending transaction proposals.
       </div>
     </label-tip>
 
