Viacoin: fixed minor dom fuck-up

--- a/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
+++ b/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
@@ -16,6 +16,7 @@
       <span translate>
         It's a good idea to avoid reusing addresses - this both protects your privacy and keeps your viacoins secure against hypothetical attacks by quantum computers.</span>
       <a (click)="showInfo = !showInfo" translate>Hide</a>
+    </div>
   </ion-item-divider>
 
   <button ion-button class="button-standard" (click)="scan()">
