--- a/src/pages/feedback/send-feedback/send-feedback.html
+++ b/src/pages/feedback/send-feedback/send-feedback.html
@@ -62,7 +62,7 @@
       <div class="feedback-action-icon arrow arrow-right"></div>
     </ion-row>
   </div>
-  <div *ngIf="score != 1" class="user-feedback-card" (click)="openExternalLink('https://bitpay.canny.io/wallet-feature-request/create')">
+  <div *ngIf="score != 1" class="user-feedback-card" (click)="openExternalLink('https://github.com/viacoin/copay/issues')">
     <ion-row>
       <div class="feedback-icon">
         <img src="assets/img/ico-chat.svg" />
@@ -77,7 +77,7 @@
       </div>
     </ion-row>
   </div>
-  <div *ngIf="score != 3" class="user-feedback-card" (click)="openExternalLink('https://bitpay.canny.io/wallet-bugs/create')">
+  <div *ngIf="score != 3" class="user-feedback-card" (click)="openExternalLink('https://github.com/viacoin/copay/issues')">
     <ion-row>
       <div class="feedback-icon">
         <img src="assets/img/ico-bug.svg" />
@@ -92,7 +92,7 @@
       </div>
     </ion-row>
   </div>
-  <div *ngIf="score == 1" class="user-feedback-card" (click)="openExternalLink('https://help.bitpay.com/requestHelp/create')">
+  <div *ngIf="score == 1" class="user-feedback-card" (click)="openExternalLink('https://github.com/viacoin/copay/issues')">
     <ion-row>
       <div class="feedback-icon">
         <img src="assets/img/icon-question-help.svg" />
