--- a/src/pages/fingerprint/fingerprint.html
+++ b/src/pages/fingerprint/fingerprint.html
@@ -7,7 +7,7 @@
     </div>
     <div class="icon-container">
       <ion-icon class="app-icon">
-        <img src="assets/img/app/icon-flat.svg" />
+        <img src="assets/img/app/icon.png" />
       </ion-icon>
     </div>
   </div>
