--- a/src/pages/pin/pin-modal/pin-modal.html
+++ b/src/pages/pin/pin-modal/pin-modal.html
@@ -22,7 +22,7 @@
     </div>
     <div class="icon-container">
       <ion-icon class="app-icon">
-        <img src="assets/img/app/icon-flat.svg" />
+        <img src="assets/img/app/icon.png" />
       </ion-icon>
     </div>
   </div>
