Viacoin: replaced some new occurences of bitcoin

--- a/src/pages/send/send.html
+++ b/src/pages/send/send.html
@@ -124,7 +124,7 @@
       </div>
     </div>
     <div *ngIf="!hasBtcWallets && !hasBchWallets" class="no-wallet-message">
-      <span translate>To get started, you'll need to create a bitcoin wallet and get some bitcoin.</span>
+      <span translate>To get started, you'll need to create a viacoin wallet and get some viacoin.</span>
     </div>
   </div>
 </ion-content>
