--- a/src/pages/add/create-wallet/create-wallet.html
+++ b/src/pages/add/create-wallet/create-wallet.html
@@ -69,7 +69,7 @@
       <label-tip *ngIf="createForm.value.testnetEnabled && createForm.value.selectedSeed == 'new'" type="warn">
         <span label-tip-title translate>Testnet Wallet</span>
         <div label-tip-body translate>
-          The testnet is an alternative Bitcoin block chain, to be used for testing. Testnet coins are separate and distinct from actual bitcoins, and do not have any value. This allows application developers or bitcoin testers to experiment, without having to use real bitcoins.
+          The testnet is an alternative Viacoin block chain, to be used for testing. Testnet coins are separate and distinct from actual viacoins, and do not have any value. This allows application developers or viacoin testers to experiment, without having to use real viacoins.
         </div>
       </label-tip>
 
