--- a/src/pages/settings/about/terms-of-use/terms-of-use.html
+++ b/src/pages/settings/about/terms-of-use/terms-of-use.html
@@ -10,14 +10,14 @@
 <ion-content padding>
 
   <p>
-    This is a binding Agreement between the Viacoin project. (&ldquo;Viacoin&rdquo; or &ldquo;We&rdquo;) and the person, persons, or entity
+    This is a binding Agreement between the MonetaryUnit project. (&ldquo;MonetaryUnit&rdquo; or &ldquo;We&rdquo;) and the person, persons, or entity
     (&ldquo;You&rdquo; or &ldquo;Your&rdquo;) using the service, Software, or application (&ldquo;Software&rdquo;).
   </p>
   <p class="terms-heading">
     RIGHTS AND OBLIGATIONS
   </p>
   <p>
-    Viacoin provides the Software solely on the terms and conditions set forth in this Agreement and on the condition that You
+    MonetaryUnit provides the Software solely on the terms and conditions set forth in this Agreement and on the condition that You
     accept and comply with them. By using the Software You (a) accept this Agreement and agree that You are legally bound
     by its terms; and (b) represent and warrant that: (i) You are of legal age to enter into a binding agreement; and (ii)
     if You are a corporation, governmental organization or other legal entity, You have the right, power and authority to
@@ -26,7 +26,7 @@
   </p>
   <p>
     This Software functions as a free, open source, and multi-signature digital wallet. The Software does not constitute an account
-    where We or other third parties serve as financial intermediaries or custodians of Your viacoin(s).
+    where We or other third parties serve as financial intermediaries or custodians of Your MonetaryUnit(s).
   </p>
   <p>
     While the Software has undergone beta testing and continues to be improved by feedback from the open-source user and developer
@@ -35,11 +35,11 @@
     private key pairs, PINs, and any other codes You use to access the Software.
   </p>
   <p>
-    IF YOU LOSE ACCESS TO YOUR VIACOIN WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR
-    WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY VIACOIN YOU HAVE ASSOCIATED WITH THAT WALLET WILL
+    IF YOU LOSE ACCESS TO YOUR MONETARYUNIT WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR
+    WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY MONETARYUNIT YOU HAVE ASSOCIATED WITH THAT WALLET WILL
     BECOME INACCESSIBLE. All transaction requests are irreversible. The authors of the Software, employees and affiliates
-    of Viacoin, copyright holders, and the Viacoin project. cannot retrieve Your private keys or passwords if You lose or forget them
-    and cannot guarantee transaction confirmation as they do not have control over the viacoin network.
+    of MonetaryUnit, copyright holders, and the MonetaryUnit project. cannot retrieve Your private keys or passwords if You lose or forget them
+    and cannot guarantee transaction confirmation as they do not have control over the MonetaryUnit network.
   </p>
   <p class="terms-heading">
     DISCLAIMER
