--- a/src/pages/onboarding/tour/tour.html
+++ b/src/pages/onboarding/tour/tour.html
@@ -11,8 +11,8 @@
 <ion-content no-bounce>
   <ion-slides pager="true" (ionSlideDidChange)="slideChanged()">
     <ion-slide>
-      <h3 class="title" translate>Viacoin is secure, digital money.</h3>
-      <p translate class="top-description">You can spend viacoin at millions of websites and stores worldwide.</p>
+      <h3 class="title" translate>MonetaryUnit is secure, digital money.</h3>
+      <p translate class="top-description">You can spend MonetaryUnit at millions of websites and stores worldwide.</p>
       <img src='assets/img/app/onboarding/tour-phone.svg' />
       <div class="bottom-absolute">
         <p translate class="bottom-description">Just scan the code to pay.</p>
@@ -23,10 +23,10 @@
     </ion-slide>
 
     <ion-slide>
-      <h3 class="title" translate>Viacoin is a currency.</h3>
+      <h3 class="title" translate>MonetaryUnit is a currency.</h3>
       <p translate class="top-description">You can trade it for other currencies like US Dollars, Euros, or Pounds.</p>
       <div class="ticker-container">
-        <div class="ticker">1 VIA = {{localCurrencySymbol}}{{localCurrencyPerBtc}}</div>
+        <div class="ticker">1 MUE = {{localCurrencySymbol}}{{localCurrencyPerBtc}}</div>
       </div>
       <img class="ticker-img" src='assets/img/app/onboarding/tour-currency.svg' />
       <div class="bottom-absolute">
@@ -38,13 +38,13 @@
     </ion-slide>
 
     <ion-slide>
-      <h3 class="title" translate>You control your viacoin.</h3>
-      <p translate class="top-description">This app stores your viacoin with cutting-edge security.</p>
+      <h3 class="title" translate>You control your MonetaryUnit.</h3>
+      <p translate class="top-description">This app stores your MonetaryUnit with cutting-edge security.</p>
       <img src='assets/img/app/onboarding/tour-control.svg' />
       <div class="bottom-absolute">
-        <p translate class="bottom-description">Not even the Viacoin team can access it.</p>
+        <p translate class="bottom-description">Not even the MonetaryUnit team can access it.</p>
         <button ion-button class="button-standard e2e-create-wallet" (click)="createDefaultWallet()">
-          {{'Create viacoin wallet' | translate}}
+          {{'Create MonetaryUnit wallet' | translate}}
         </button>
       </div>
     </ion-slide>
