--- a/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-service-url/wallet-service-url.html
+++ b/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-service-url/wallet-service-url.html
@@ -12,7 +12,7 @@
         <ion-input type="text" formControlName="bwsurl" [value]="walletServiceForm.value.bwsurl" required></ion-input>
       </ion-item>
       <ion-item-divider text-wrap>
-        <span translate>{{appName}} depends on Viacore Wallet Service (VWS) for blockchain information, networking and Copayer synchronization. The default configuration points to https://vws.viacoin.org (Viacoin's public VWS instance).</span>
+        <span translate>{{appName}} depends on MonetaryUnit Wallet Service (VWS) for blockchain information, networking and Copayer synchronization. The default configuration points to https://vws.monetaryunit.org (MonetaryUnit's public VWS instance).</span>
         <a (click)="resetDefaultUrl()" translate>
           Use default url
         </a>
