--- a/src/pages/backup/backup-warning/backup-warning.html
+++ b/src/pages/backup/backup-warning/backup-warning.html
@@ -9,7 +9,7 @@
     <img src='assets/img/app/onboarding/backup-warning.svg' />
   </div>
   <div class="bottom-absolute">
-    <p translate class="bottom-description">Anyone with your backup phrase can access or spend your viacoin.</p>
+    <p translate class="bottom-description">Anyone with your backup phrase can access or spend your MonetaryUnit.</p>
     <button ion-button class="button-standard" (click)="openWarningModal()">
       {{'Got it' | translate}}
     </button>
