--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -58,7 +58,7 @@
           <img src="assets/img/check-white.svg" class="bg green" />
         </ion-icon>
         <div class="title" translate>
-          Your viacoin wallet is ready!
+          Your MonetaryUnit wallet is ready!
         </div>
         <div class="subtitle" translate>
           On this screen you can see all your wallets, accounts, and assets.
@@ -103,7 +103,7 @@
     <div class="card" *ngIf="walletsBtc && walletsBtc[0]">
       <ion-item-divider>
         <div class="title" item-start>
-          <span translate>Viacoin Wallets</span>
+          <span translate>MonetaryUnit Wallets</span>
         </div>
         <div item-end *ngIf="!showReorderBtc">
           <button ion-button clear icon-only color="grey" (click)="goToAddView()">
