--- a/src/pages/onboarding/onboarding.html
+++ b/src/pages/onboarding/onboarding.html
@@ -1,7 +1,7 @@
 <ion-content no-bounce>
   <div class="logo-tagline">
     <img src='assets/img/app/onboarding.png' />
-    <p [ngClass]="{'primary-color': !isCopay, 'comment-color': isCopay}" translate>Take control of your money, get started with viacoin.</p>
+    <p [ngClass]="{'primary-color': !isCopay, 'comment-color': isCopay}" translate>Take control of your money, get started with MonetaryUnit.</p>
   </div>
   <div class="bottom-absolute">
     <button ion-button class="button-standard e2e-get-started" (click)="getStarted()">
