--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -50,7 +50,7 @@
           </div>
           <div class="title" padding translate>Scan QR Codes</div>
         </div>
-        <div class="subtitle" translate>You can scan viacoin addresses, payment requests, paper wallets, and more.</div>
+        <div class="subtitle" translate>You can scan MonetaryUnit addresses, payment requests, paper wallets, and more.</div>
       </div>
     </div>
     <div class="body">
