--- a/src/pages/send/fee-warning/fee-warning.html
+++ b/src/pages/send/fee-warning/fee-warning.html
@@ -3,9 +3,9 @@
     <img src="assets/img/icon-warning.svg">
   </div>
   <div class="modal-content">
-    <div class="modal-heading" translate>Viacoin miner fees unusually high</div>
+    <div class="modal-heading" translate>MonetaryUnit miner fees unusually high</div>
     <div class="modal-message" translate>
-      Viacoin (VIA) miner fees are high due to record demand for limited space on the Viacoin network. The Viacoin team does not receive and does not control viacoin miner fees.
+      MonetaryUnit (MUE) miner fees are high due to record demand for limited space on the MonetaryUnit network. The MonetaryUnit team does not receive and does not control MonetaryUnit miner fees.
     </div>
     <button ion-button clear color="danger" class="button-standard" (click)="close()">
       {{'I understand' | translate}}
