--- a/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
+++ b/src/pages/settings/wallet-settings/wallet-settings-advanced/wallet-addresses/wallet-addresses.html
@@ -8,10 +8,10 @@
   <page-wallet-item [wallet]="wallet"></page-wallet-item>
   <ion-item-divider text-wrap text-center>
     <span translate>
-        Each Viacoin wallet can generate billions of addresses from your 12-word backup. A new address is automatically generated and shown each time you receive a payment.</span>
+        Each MonetaryUnit wallet can generate billions of addresses from your 12-word backup. A new address is automatically generated and shown each time you receive a payment.</span>
       <br>
       <span translate>
-        It's a good idea to avoid reusing addresses - this both protects your privacy and keeps your viacoins secure against hypothetical attacks by quantum computers.</span>
+        It's a good idea to avoid reusing addresses - this both protects your privacy and keeps your MonetaryUnit secure against hypothetical attacks by quantum computers.</span>
       <a (click)="showInfo = !showInfo" translate>Hide</a>
   </ion-item-divider>
 
@@ -78,7 +78,7 @@
       </ion-item>
 
       <ion-item text-wrap>
-        <span translate>Approximate Viacoin network fee to transfer wallet's balance (with normal priority)</span>
+        <span translate>Approximate MonetaryUnit network fee to transfer wallet's balance (with normal priority)</span>
         <p class="info">{{minFeePer}} [{{minFee}}]</p>
       </ion-item>
     </div>
