--- a/src/pages/settings/fee-policy/fee-policy.html
+++ b/src/pages/settings/fee-policy/fee-policy.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <ion-title>
-      {{'Viacoin Network Fee Policy'|translate}}
+      {{'MonetaryUnit Network Fee Policy'|translate}}
     </ion-title>
   </ion-navbar>
 
@@ -12,7 +12,7 @@
 <ion-content>
 
   <div class="explanation" padding>
-    <div class="heading" translate>Viacoin transactions include a fee collected by miners on the network.</div>
+    <div class="heading" translate>MonetaryUnit transactions include a fee collected by miners on the network.</div>
     <div class="description" translate>The higher the fee, the greater the incentive a miner has to include that transaction in a block. Current fees are determined based on network load and the selected policy.</div>
     <div class="estimates">
       <div>
