--- a/src/pages/add/import-wallet/import-wallet.html
+++ b/src/pages/add/import-wallet/import-wallet.html
@@ -61,7 +61,7 @@
     <ion-item *ngIf="selectedTab != 'file'">
       <ion-label stacked>{{'Coin' | translate}}</ion-label>
       <ion-select disabled placeholder="{{'Select a coin' | translate}}" formControlName="coin">
-        <ion-option value="via">Viacoin (VIA)</ion-option>
+        <ion-option value="mue">MonetaryUnit (MUE)</ion-option>
       </ion-select>
     </ion-item>
 
