--- a/src/pages/add/join-wallet/join-wallet.html
+++ b/src/pages/add/join-wallet/join-wallet.html
@@ -24,7 +24,7 @@
     <ion-item>
       <ion-label stacked>{{'Coin' | translate}}</ion-label>
       <ion-select disabled placeholder="{{'Select a coin' | translate}}" formControlName="coin">
-        <ion-option value="via">VIA</ion-option>
+        <ion-option value="mue">MUE</ion-option>
       </ion-select>
     </ion-item>
 
